--- a/html/registrar_usuarios.html
+++ b/html/registrar_usuarios.html
@@ -78,6 +78,57 @@
   </div>
   <!-- Side Menu End -->
 
+  <!-- Content Start -->
+  <div class="main">
+    <div class="content-container">
+      <h1>Registrar nuevo entrenador</h1>
+      <div class="form-container">
+        <form action="#" method="POST">
+          <div class="form-field">
+            <label for="name" class="field-title">Nombre completo</label><br />
+            <input type="text" id="name" name="name" autocomplete="off" /><br />
+          </div>
+
+          <div class="form-field">
+            <label for="birthdate" class="field-title">Fecha de nacimiento</label><br />
+            <input type="date" id="birthdate" name="birthdate" autocomplete="off" /><br />
+          </div>
+
+          <div class="form-field">
+            <p class="field-title">Entrena:</p><br>
+            <input type="radio" id="grupo-a" name="group" autocomplete="off" />
+            <label for="grupo-a">Grupo A</label><br />
+            <input type="radio" id="grupo-b" name="group" autocomplete="off" />
+            <label for="grupo-b">Grupo B</label><br />
+            <input type="radio" id="grupo-c" name="group" autocomplete="off" />
+            <label for="grupo-c">Grupo C</label><br />
+          </div>
+
+          <div class="form-field">
+            <label for="email" class="field-title">Correo eléctronico</label><br />
+            <input type="email" id="email" name="email" autocomplete="off" /><br />
+          </div>
+
+          <div class="form-field">
+            <label for="main-phone" class="field-title">Teléfono</label><br />
+            <input type="text" id="main-phone" name="main-phone" autocomplete="off" /><br />
+          </div>
+
+          <div class="form-field">
+            <label for="secondary-phone" class="field-title">Teléfono secundario</label><br />
+            <input type="text" id="secondary-phone" name="secondary-phone" autocomplete="off" /><br />
+          </div>
+
+          <div class="form-field">
+            <label for="dni" class="field-title">D.N.I</label><br />
+            <input type="text" id="dni" name="dni" autocomplete="off" /><br />
+          </div>
+          <input type="submit" value="Enviar" />
+      </div>
+      </form>
+    </div>
+  </div>
+  <!-- Content End -->
 
 
   <!-- JQuery -->
