--- a/html/administrar_usuarios.html
+++ b/html/administrar_usuarios.html
@@ -154,6 +154,7 @@
         </div>
         <div class="name-container">
           <h2>Nombre completo</h2>
+          <p>Grupo: A</p>
           <p class="hidden-content hidden">Fecha de nacimiento: XX/XX/XXXX</p>
         </div>
         <div class="contact-container">
@@ -175,6 +176,7 @@
         </div>
         <div class="name-container">
           <h2>Nombre completo</h2>
+          <p>Grupo: A</p>
           <p class="hidden-content hidden">Fecha de nacimiento: XX/XX/XXXX</p>
         </div>
         <div class="contact-container">
@@ -196,6 +198,7 @@
         </div>
         <div class="name-container">
           <h2>Nombre completo</h2>
+          <p>Grupo: A</p>
           <p class="hidden-content hidden">Fecha de nacimiento: XX/XX/XXXX</p>
         </div>
         <div class="contact-container">
@@ -217,6 +220,7 @@
         </div>
         <div class="name-container">
           <h2>Nombre completo</h2>
+          <p>Grupo: A</p>
           <p class="hidden-content hidden">Fecha de nacimiento: XX/XX/XXXX</p>
         </div>
         <div class="contact-container">
