--- a/html/modificar_noticia.html
+++ b/html/modificar_noticia.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Registrar usuarios</title>
+  <title>Modificar noticia</title>
 
   <!-- FontAwesome CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
 
   <link rel="stylesheet" href="/css/style.css" />
   <link rel="stylesheet" href="/css/administrador.css" />
-  <link rel="stylesheet" href="/css/registrar_usuarios.css" />
+  <link rel="stylesheet" href="/css/modificar_noticia.css" />
 </head>
 
 <body>
@@ -28,15 +28,15 @@
       <div class="col title-empty-col"></div>
       <div class="col-5 title-col">
         <div class="title-main">
-          <span>Usuarios</span>
+          <span>Noticias</span>
         </div>
       </div>
 
       <div class="col-5 title-col">
         <div class="title-path">
-          <span>Usuarios</span>
+          <span>Noticias</span>
           <span>/</span>
-          <span>Registrar usuarios</span>
+          <span>Modificar noticia</span>
         </div>
       </div>
       <div class="col title-empty-col"></div>
@@ -79,17 +79,40 @@
   <!-- Side Menu End -->
 
   <!-- Content Start -->
-  <a href="/html/registrar_entrenador.html">
-    <div class="register-panel">
-      <p>Registrar entrenador</p>
+  <div class="main">
+    <div class="content-container">
+      <h1>Modificar noticia</h1>
+      <div class="form-container">
+        <form action="#" method="POST">
+
+          <div class="form-field">
+            <label for="news-title" class="field-title">Titulo</label><br />
+            <input type="text" id="news-title" name="news-title" autocomplete="off" /><br />
+          </div>
+
+          <div class="form-field">
+            <label for="news-image" class="field-title">Imagen</label><br />
+            <input type="file" id="news-image" name="news-image" autocomplete="off" /><br />
+          </div>
+
+          <div class="form-field">
+            <label for="news-date" class="field-title">Fecha</label><br />
+            <input type="date" id="news-date" name="news-date" autocomplete="off" /><br />
+          </div>
+
+          <label for="news-description" class="field-title">Descripción</label><br />
+          <textarea name="news-description" id="news-description" autocomplete="off"></textarea>
+
+          <label for="news-body" class="field-title">Cuerpo</label><br />
+          <textarea name="news-body" id="news-body" autocomplete="off"></textarea>
+
+          <input type="submit" value="Enviar" />
+      </div>
+      </form>
     </div>
-  </a>
-  <a href="/html/registrar_gimnasta.html">
-    <div class="register-panel">
-      <p>Registrar gimnasta</p>
-    </div>
-  </a>
+  </div>
   <!-- Content End -->
+
 
 
   <!-- JQuery -->
