--- a/html/anadir_noticias.html
+++ b/html/anadir_noticias.html
@@ -78,6 +78,41 @@
   </div>
   <!-- Side Menu End -->
 
+  <!-- Content Start -->
+  <div class="main">
+    <div class="content-container">
+      <h1>Añadir una noticia</h1>
+      <div class="form-container">
+        <form action="#" method="POST">
+
+          <div class="form-field">
+            <label for="news-title" class="field-title">Titulo</label><br />
+            <input type="text" id="news-title" name="news-title" autocomplete="off" /><br />
+          </div>
+
+          <div class="form-field">
+            <label for="news-image" class="field-title">Imagen</label><br />
+            <input type="file" id="news-image" name="news-image" autocomplete="off" /><br />
+          </div>
+
+          <div class="form-field">
+            <label for="news-date" class="field-title">Fecha</label><br />
+            <input type="date" id="news-date" name="news-date" autocomplete="off" /><br />
+          </div>
+
+          <label for="news-description" class="field-title">Descripción</label><br />
+          <textarea name="news-description" id="news-description" autocomplete="off"></textarea>
+
+          <label for="news-body" class="field-title">Cuerpo</label><br />
+          <textarea name="news-body" id="news-body" autocomplete="off"></textarea>
+
+          <input type="submit" value="Enviar" />
+      </div>
+      </form>
+    </div>
+  </div>
+  <!-- Content End -->
+
 
 
   <!-- JQuery -->
