--- a/html/palmares.html
+++ b/html/palmares.html
@@ -1,180 +1,200 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Palmarés</title>
 
-    <!-- FontAwesome CSS -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Palmarés</title>
 
-    <link rel="stylesheet" href="/css/style.css" />
-    <link rel="stylesheet" href="/css/palmares.css" />
-  </head>
+  <!-- FontAwesome CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
 
-  <body>
-    <!-- Menu Start -->
-    <div class="container">
-      <!-- Header Start -->
-      <div class="row header-row">
-        <div class="col"></div>
-        <div class="col-10 header-col">
-          <a href="/html/index.html">
-            <img src="/assets/logo_ritmica2.png" />
-          </a>
-          <div class="header-icon-wrapper">
-            <a
-              href="https://www.facebook.com/ritmicalamojonera"
-              class="fab fa-facebook-square"
-            ></a>
-            <a
-              href="https://www.youtube.com/channel/UC1t4MldjalCTkdC2cYVgVfg"
-              class="fab fa-youtube"
-            ></a>
-            <a
-              href="https://www.instagram.com/ritmicalamojonera/?hl=es"
-              class="fab fa-instagram-square"
-            ></a>
-            <a href="/html/login.html" class="far fa-user"></a>
-          </div>
+  <link rel="stylesheet" href="/css/style.css" />
+  <link rel="stylesheet" href="/css/palmares.css" />
+</head>
+
+<body>
+  <!-- Menu Start -->
+  <div class="container">
+    <!-- Header Start -->
+    <div class="row header-row">
+      <div class="col"></div>
+      <div class="col-10 header-col">
+        <a href="/html/index.html">
+          <img src="/assets/logo_ritmica2.png" />
+        </a>
+        <div class="header-icon-wrapper">
+          <a href="https://www.facebook.com/ritmicalamojonera" class="fab fa-facebook-square"></a>
+          <a href="https://www.youtube.com/channel/UC1t4MldjalCTkdC2cYVgVfg" class="fab fa-youtube"></a>
+          <a href="https://www.instagram.com/ritmicalamojonera/?hl=es" class="fab fa-instagram-square"></a>
+          <a href="/html/login.html" class="far fa-user"></a>
         </div>
-        <div class="col"></div>
       </div>
-      <!-- Header End -->
-
-      <!-- Navbar Start -->
-      <div class="row nav-row">
-        <div class="col"></div>
-        <div class="col-10 nav-col" id="nav-col">
-          <a class="nav-btn" href="/html/index.html">Inicio</a>
-          <div class="dropdown">
-            <a class="nav-btn" href="/html/el_club.html">El Club</a>
-            <div class="dropdown-content">
-              <a href="/html/cuerpo_tecnico.html">Cuerpo técnico</a>
-              <a href="/html/palmares.html">Palmarés</a>
-            </div>
-          </div>
-          <a class="nav-btn" href="/html/normativa.html">Normativa</a>
-          <div class="dropdown">
-            <a class="nav-btn" href="/html/actividades.html">Actividades</a>
-            <div class="dropdown-content">
-              <a href="/html/actividades_verano.html">Actividades de verano</a>
-              <a href="/html/escuela.html">Escuela</a>
-              <a href="/html/federadas.html">Federadas</a>
-            </div>
-          </div>
-          <a class="nav-btn" href="/html/matriculacion.html">Matriculación</a>
-          <div class="dropdown">
-            <a class="nav-btn" href="/html/competiciones.html">Competiciones</a>
-            <div class="dropdown-content">
-              <a href="/html/provincial.html">Provincial</a>
-              <a href="/html/autonomica.html">Autonómica</a>
-              <a href="/html/nacional.html">Nacional</a>
-            </div>
-          </div>
-          <a class="nav-btn" href="/html/noticias.html">Noticias</a>
-          <a class="nav-btn" href="/html/galeria.html">Galería</a>
-          <a class="nav-btn" href="/html/contacto.html">Contacto</a>
-          <a class="dropdown-icon" href="javascript:void(0)">
-            <span class="fas fa-bars"></span>
-          </a>
-        </div>
-        <div class="col"></div>
-      </div>
-      <!-- Navbar End -->
+      <div class="col"></div>
     </div>
-    <!-- Menu End -->
+    <!-- Header End -->
 
-    <!-- Title Start -->
-    <div class="container">
-      <div class="row title-row">
-        <div class="col title-empty-col"></div>
-        <div class="col-5 title-col">
-          <div class="title-main">
+    <!-- Navbar Start -->
+    <div class="row nav-row">
+      <div class="col"></div>
+      <div class="col-10 nav-col" id="nav-col">
+        <a class="nav-btn" href="/html/index.html">Inicio</a>
+        <div class="dropdown">
+          <a class="nav-btn" href="/html/el_club.html">El Club</a>
+          <div class="dropdown-content">
+            <a href="/html/cuerpo_tecnico.html">Cuerpo técnico</a>
             <a href="/html/palmares.html">Palmarés</a>
           </div>
         </div>
-
-        <div class="col-5 title-col">
-          <div class="title-path">
-            <a href="/html/index.html">Inicio</a>
-            <span>/</span>
-            <a href="/html/el_club.html">El club</a>
-            <span>/</span>
-            <a href="/html/palmares.html">Palmarés</a>
+        <a class="nav-btn" href="/html/normativa.html">Normativa</a>
+        <div class="dropdown">
+          <a class="nav-btn" href="/html/actividades.html">Actividades</a>
+          <div class="dropdown-content">
+            <a href="/html/actividades_verano.html">Actividades de verano</a>
+            <a href="/html/escuela.html">Escuela</a>
+            <a href="/html/federadas.html">Federadas</a>
           </div>
         </div>
-        <div class="col title-empty-col"></div>
+        <a class="nav-btn" href="/html/matriculacion.html">Matriculación</a>
+        <div class="dropdown">
+          <a class="nav-btn" href="/html/competiciones.html">Competiciones</a>
+          <div class="dropdown-content">
+            <a href="/html/provincial.html">Provincial</a>
+            <a href="/html/autonomica.html">Autonómica</a>
+            <a href="/html/nacional.html">Nacional</a>
+          </div>
+        </div>
+        <a class="nav-btn" href="/html/noticias.html">Noticias</a>
+        <a class="nav-btn" href="/html/galeria.html">Galería</a>
+        <a class="nav-btn" href="/html/contacto.html">Contacto</a>
+        <a class="dropdown-icon" href="javascript:void(0)">
+          <span class="fas fa-bars"></span>
+        </a>
+      </div>
+      <div class="col"></div>
+    </div>
+    <!-- Navbar End -->
+  </div>
+  <!-- Menu End -->
+
+  <!-- Title Start -->
+  <div class="container">
+    <div class="row title-row">
+      <div class="col title-empty-col"></div>
+      <div class="col-5 title-col">
+        <div class="title-main">
+          <a href="/html/palmares.html">Palmarés</a>
+        </div>
+      </div>
+
+      <div class="col-5 title-col">
+        <div class="title-path">
+          <a href="/html/index.html">Inicio</a>
+          <span>/</span>
+          <a href="/html/el_club.html">El club</a>
+          <span>/</span>
+          <a href="/html/palmares.html">Palmarés</a>
+        </div>
+      </div>
+      <div class="col title-empty-col"></div>
+    </div>
+  </div>
+  <!-- Title End -->
+
+
+  <!-- Content Start -->
+  <div class="palmares-content">
+    <div>
+      <h2>Palmarés del Club Rítmica La Mojonera</h2>
+      <p>Texto de ejemplo Nuestras entrenadoras forman gimnastas en dos niveles: la sección escuela y la sección club.
+        Todas están
+        acreditas, muchas con el máximo nivel federativo de Gimnasia Rítmica, y proceden de la alta competición a nivel
+        nacional. La mayoría compaginan su trabajo en el club con estudios de grado superior y enseñanza en actividades
+        extraescolares en otros centros. Esa increíble capacidad de organización y compromiso la transmiten a nuestras
+        niñas, ayudandolas a crecer no solo en el aspecto técnico, sino también como personas. Desde el club se trabaja
+        para que reciban cursos que les permita evolucionar en su carrera, manteniéndose continuamente actualizadas en
+        aras de un mayor y mejor rendimiento de las gimnastas.</p>
+    </div>
+    <div class="trophy-container">
+
+      <div class="trophy">
+        <div class="trophy-img">
+          <img src="/assets/Más fotos/WhatsApp Image 2020-10-27 at 15.39.15 (1).jpeg">
+        </div>
+        <div class="trophy-text">
+          <h3>Nombre del trofeo</h3>
+          <p>Descripción del trofeo del trofeo del trofeo del trofeo del trofeo del trofeo del trofeo del trofeo del
+            trofeo</p>
+        </div>
+      </div>
+
+      <div class="trophy">
+        <div class="trophy-img">
+          <img src="/assets/Más fotos/WhatsApp Image 2020-10-27 at 15.39.11 (1).jpeg  ">
+        </div>
+        <div class="trophy-text">
+          <h3>Nombre del trofeo</h3>
+          <p>Descripción del trofeo del trofeo del trofeo del trofeo del trofeo del trofeo del trofeo del trofeo del
+            trofeo</p>
+        </div>
+      </div>
+
+    </div>
+  </div>
+  <!-- Content End -->
+
+
+  <!-- Footer Start -->
+  <div class="container footer">
+    <div class="row">
+      <div class="col-4 footer-col">
+        <h1>Ven a visitarnos</h1>
+        <p>Concreta una cita y disfruta de nuestros entrenamientos</p>
+        <p>
+          <a>
+            C/ Av. Europa, 143 (Carpa de usos multiples), La Mojonera-04745,
+            Almería
+          </a>
+        </p>
+      </div>
+      <div class="col-4 footer-col">
+        <h1>Contacta con nosotros</h1>
+        <p>
+          Infórmate sobres nuestros precios y horarios, siempre habrá alguien
+          encantado de atenderte
+        </p>
+        <p>
+          Correo: <a>cdrlamojonera@gmail.com</a><br />
+          Telefono: <a>621 013 265</a><br />
+          Whatsapp: <a>+34 621 013 265</a><br />
+        </p>
+      </div>
+      <div class="col-4 footer-col">
+        <h1>Siguenos en redes sociales</h1>
+        <p>Entérate de todo al instante</p>
+        <a href="https://www.facebook.com/ritmicalamojonera" class="fab fa-facebook-square"></a>
+        <a href="https://www.youtube.com/channel/UC1t4MldjalCTkdC2cYVgVfg" class="fab fa-youtube"></a>
+        <a href="https://www.instagram.com/ritmicalamojonera/?hl=es" class="fab fa-instagram-square"></a>
       </div>
     </div>
-    <!-- Title End -->
-
-    <!-- Borrar este div, es solo temporal -->
-    <div style="height: 400px; background-color: lightblue"></div>
-    <!-- Borrar este div, es solo temporal -->
-
-    <!-- Footer Start -->
-    <div class="container footer">
-      <div class="row">
-        <div class="col-4 footer-col">
-          <h1>Ven a visitarnos</h1>
-          <p>Concreta una cita y disfruta de nuestros entrenamientos</p>
-          <p>
-            <a>
-              C/ Av. Europa, 143 (Carpa de usos multiples), La Mojonera-04745,
-              Almería
-            </a>
-          </p>
-        </div>
-        <div class="col-4 footer-col">
-          <h1>Contacta con nosotros</h1>
-          <p>
-            Infórmate sobres nuestros precios y horarios, siempre habrá alguien
-            encantado de atenderte
-          </p>
-          <p>
-            Correo: <a>cdrlamojonera@gmail.com</a><br />
-            Telefono: <a>621 013 265</a><br />
-            Whatsapp: <a>+34 621 013 265</a><br />
-          </p>
-        </div>
-        <div class="col-4 footer-col">
-          <h1>Siguenos en redes sociales</h1>
-          <p>Entérate de todo al instante</p>
-          <a
-            href="https://www.facebook.com/ritmicalamojonera"
-            class="fab fa-facebook-square"
-          ></a>
-          <a
-            href="https://www.youtube.com/channel/UC1t4MldjalCTkdC2cYVgVfg"
-            class="fab fa-youtube"
-          ></a>
-          <a
-            href="https://www.instagram.com/ritmicalamojonera/?hl=es"
-            class="fab fa-instagram-square"
-          ></a>
-        </div>
+    <div class="row">
+      <div class="col footer-copyright-col">
+        <p>
+          Copyright © 2020 - Ritmica la Mojonera - Todos los derechos
+          reservados
+        </p>
       </div>
-      <div class="row">
-        <div class="col footer-copyright-col">
-          <p>
-            Copyright © 2020 - Ritmica la Mojonera - Todos los derechos
-            reservados
-          </p>
-        </div>
-      </div>
-      <button id="goback-btn">
-        <i class="fas fa-arrow-up"></i>
-      </button>
     </div>
-    <!-- Footer End -->
+    <button id="goback-btn">
+      <i class="fas fa-arrow-up"></i>
+    </button>
+  </div>
+  <!-- Footer End -->
 
-    <!-- JQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <!-- JQuery -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-    <script src="/js/main.js"></script>
-  </body>
+  <script src="/js/main.js"></script>
+</body>
+
 </html>
