--- a/html/palmares.html
+++ b/html/palmares.html
@@ -119,7 +119,7 @@
 
       <div class="trophy">
         <div class="trophy-img">
-          <img src="/assets/Más fotos/WhatsApp Image 2020-10-27 at 15.39.15 (1).jpeg">
+          <img src="/assets/51BZ72JzaTL._AC_SX466_.jpg">
         </div>
         <div class="trophy-text">
           <h3>Nombre del trofeo</h3>
@@ -130,7 +130,7 @@
 
       <div class="trophy">
         <div class="trophy-img">
-          <img src="/assets/Más fotos/WhatsApp Image 2020-10-27 at 15.39.11 (1).jpeg  ">
+          <img src="/assets/trofeo-dorado-realista-espacio-texto_48799-1062.jpg">
         </div>
         <div class="trophy-text">
           <h3>Nombre del trofeo</h3>
