--- a/html/administrar_inscripciones.html
+++ b/html/administrar_inscripciones.html
@@ -76,6 +76,83 @@
   <!-- Side Menu End -->
 
 
+  <!-- Content Start -->
+  <div class="content-container">
+    <div class="gymnast-container">
+      <div class="gymnast">
+        <div class="img-container">
+          <img src="/assets/Juanma - profile.jpeg">
+        </div>
+        <div class="name-container">
+          <h2>Nombre completo</h2>
+        </div>
+        <div class="contact-container">
+          <p>Nombre Completo</p>
+          <p>Pago realizado: Si</p>
+          <p class="hidden-content hidden">Fecha: XX / XX / XXXX</p>
+          <p class="hidden-content hidden">Telefono: 666 66 66 66</p>
+        </div>
+      </div>
+      <img src="/assets/tick.webp" class="edit-img">
+      <img src="/assets/cross.jpg" class="bin-img">
+    </div>
+    <div class="gymnast-container">
+      <div class="gymnast">
+        <div class="img-container">
+          <img src="/assets/annie.jpeg">
+        </div>
+        <div class="name-container">
+          <h2>Nombre completo</h2>
+        </div>
+        <div class="contact-container">
+          <p>Nombre Completo</p>
+          <p>Pago realizado: Si</p>
+          <p class="hidden-content hidden">Fecha: XX / XX / XXXX</p>
+          <p class="hidden-content hidden">Telefono: 666 66 66 66</p>
+        </div>
+      </div>
+      <img src="/assets/tick.webp" class="edit-img">
+      <img src="/assets/cross.jpg" class="bin-img">
+    </div>
+    <div class="gymnast-container">
+      <div class="gymnast">
+        <div class="img-container">
+          <img src="/assets/sofi.png">
+        </div>
+        <div class="name-container">
+          <h2>Nombre completo</h2>
+        </div>
+        <div class="contact-container">
+          <p>Nombre Completo</p>
+          <p>Pago realizado: Si</p>
+          <p class="hidden-content hidden">Fecha: XX / XX / XXXX</p>
+          <p class="hidden-content hidden">Telefono: 666 66 66 66</p>
+        </div>
+      </div>
+      <img src="/assets/tick.webp" class="edit-img">
+      <img src="/assets/cross.jpg" class="bin-img">
+    </div>
+    <div class="gymnast-container">
+      <div class="gymnast">
+        <div class="img-container">
+          <img src="/assets/mariMar.jpeg">
+        </div>
+        <div class="name-container">
+          <h2>Nombre completo</h2>
+        </div>
+        <div class="contact-container">
+          <p>Nombre Completo</p>
+          <p>Pago realizado: Si</p>
+          <p class="hidden-content hidden">Fecha: XX / XX / XXXX</p>
+          <p class="hidden-content hidden">Telefono: 666 66 66 66</p>
+        </div>
+      </div>
+      <img src="/assets/tick.webp" class="edit-img">
+      <img src="/assets/cross.jpg" class="bin-img">
+    </div>
+  </div>
+  <!-- Content End -->
+
 
   <!-- JQuery -->
   <script src=" https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
