--- a/html/modificar_incluir_imagenes.html
+++ b/html/modificar_incluir_imagenes.html
@@ -79,6 +79,25 @@
   <!-- Side Menu End -->
 
 
+  <!-- Content Start -->
+  <div class="main">
+    <div class="content-container">
+      <h1>Añadir una imágen</h1>
+      <div class="form-container">
+        <form action="#" method="POST">
+
+          <div class="form-field">
+            <label for="trophy-image" class="field-title">Imagen</label><br />
+            <input type="file" id="trophy-image" name="trophy-image" autocomplete="off" /><br />
+          </div>
+
+          <input type="submit" value="Enviar" />
+      </div>
+      </form>
+    </div>
+  </div>
+  <!-- Content End -->
+
 
   <!-- JQuery -->
   <script src=" https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
