--- a/html/modificar_noticias.html
+++ b/html/modificar_noticias.html
@@ -11,7 +11,7 @@
 
   <link rel="stylesheet" href="/css/style.css" />
   <link rel="stylesheet" href="/css/administrador.css" />
-  <link rel="stylesheet" href="/css/modificar_eliminar_noticias.css" />
+  <link rel="stylesheet" href="/css/modificar_noticias.css" />
 </head>
 
 <body>
@@ -51,30 +51,37 @@
   </button>
   <div class="side-menu">
     <a href="javascript:void(0)" class="close-btn">&times;</a>
+
     <div class="menu-section">
       <a href="javascript:void(0)" class="menu-title">Usuarios</a>
-      <a href="/html/registrar_usuarios.html" class="menu-text">Registrar usuarios</a>
+      <a href="/html/administrar_inscripciones.html" class="menu-text">Inscripciones</a>
       <a href="/html/administrar_usuarios.html" class="menu-text">Administrar usuarios</a>
+      <a href="/html/registrar_usuarios.html" class="menu-text">Registrar usuarios</a>
     </div>
 
     <div class="menu-section">
       <a href="javascript:void(0)" class="menu-title">Noticias</a>
-      <a href="/html/modificar_eliminar_noticias.html" class="menu-text">Modificar y eliminar noticias</a>
       <a href="/html/anadir_noticias.html" class="menu-text">Añadir noticias</a>
+      <a href="/html/modificar_noticias.html" class="menu-text">Modificar o eliminar noticias</a>
     </div>
+
     <div class="menu-section">
       <a href="javascript:void(0)" class="menu-title">Horarios</a>
-      <a href="/html/actualizar_modificar_horarios.html" class="menu-text">Actualizar y modificar horarios</a>
+      <a href="/html/modificar_horarios.html" class="menu-text">Actualizar y modificar horarios</a>
     </div>
+
     <div class="menu-section">
-      <a href="javascript:void(0)" class="menu-title">Club</a>
-      <a href="anadir_trofeos.html" class="menu-text">Añadir trofeos/logros del club</a>
-      <a href="modificar_incluir_imagenes.html" class="menu-text">Modificar e incluir imágenes</a>
+      <a href="javascript:void(0)" class="menu-title">Galería</a>
+      <a href="/html/anadir_imagenes.html" class="menu-text">Añadir nueva imagen</a>
+      <a href="/html/modificar_imagenes.html" class="menu-text">Eliminar imagenes</a>
     </div>
-    <hr>
+
     <div class="menu-section">
-      <a href="administrar_inscripciones.html" class="menu-text">Administrar inscripciones</a>
+      <a href="javascript:void(0)" class="menu-title">Palmarés</a>
+      <a href="/html/anadir_logros.html" class="menu-text">Añadir logros del club</a>
+      <a href="/html/modificar_logros.html" class="menu-text">Modificar o eliminar logros del club</a>
     </div>
+
   </div>
   <!-- Side Menu End -->
 
