--- a/html/administrar_usuarios.html
+++ b/html/administrar_usuarios.html
@@ -49,30 +49,37 @@
   </button>
   <div class="side-menu">
     <a href="javascript:void(0)" class="close-btn">&times;</a>
+
     <div class="menu-section">
       <a href="javascript:void(0)" class="menu-title">Usuarios</a>
-      <a href="/html/registrar_usuarios.html" class="menu-text">Registrar usuarios</a>
+      <a href="/html/administrar_inscripciones.html" class="menu-text">Inscripciones</a>
       <a href="/html/administrar_usuarios.html" class="menu-text">Administrar usuarios</a>
+      <a href="/html/registrar_usuarios.html" class="menu-text">Registrar usuarios</a>
     </div>
 
     <div class="menu-section">
       <a href="javascript:void(0)" class="menu-title">Noticias</a>
-      <a href="/html/modificar_eliminar_noticias.html" class="menu-text">Modificar y eliminar noticias</a>
       <a href="/html/anadir_noticias.html" class="menu-text">Añadir noticias</a>
+      <a href="/html/modificar_noticias.html" class="menu-text">Modificar o eliminar noticias</a>
     </div>
+
     <div class="menu-section">
       <a href="javascript:void(0)" class="menu-title">Horarios</a>
-      <a href="/html/actualizar_modificar_horarios.html" class="menu-text">Actualizar y modificar horarios</a>
+      <a href="/html/modificar_horarios.html" class="menu-text">Actualizar y modificar horarios</a>
     </div>
+
     <div class="menu-section">
-      <a href="javascript:void(0)" class="menu-title">Club</a>
-      <a href="anadir_trofeos.html" class="menu-text">Añadir trofeos/logros del club</a>
-      <a href="modificar_incluir_imagenes.html" class="menu-text">Modificar e incluir imágenes</a>
+      <a href="javascript:void(0)" class="menu-title">Galería</a>
+      <a href="/html/anadir_imagenes.html" class="menu-text">Añadir nueva imagen</a>
+      <a href="/html/modificar_imagenes.html" class="menu-text">Eliminar imagenes</a>
     </div>
-    <hr />
+
     <div class="menu-section">
-      <a href="administrar_inscripciones.html" class="menu-text">Administrar inscripciones</a>
+      <a href="javascript:void(0)" class="menu-title">Palmarés</a>
+      <a href="/html/anadir_logros.html" class="menu-text">Añadir logros del club</a>
+      <a href="/html/modificar_logros.html" class="menu-text">Modificar o eliminar logros del club</a>
     </div>
+
   </div>
   <!-- Side Menu End -->
 
@@ -96,7 +103,7 @@
           <p class="hidden-content hidden">DNI: 99966699</p>
         </div>
       </div>
-      <a href="editar_usuario.html">
+      <a href="modificar_usuario.html">
         <img src="/assets/edit-icon.PNG" class="edit-img">
       </a>
       <img src="/assets/bin-icon.PNG" class="bin-img">
@@ -118,7 +125,7 @@
           <p class="hidden-content hidden">DNI: 99966699</p>
         </div>
       </div>
-      <a href="editar_usuario.html">
+      <a href="modificar_usuario.html">
         <img src="/assets/edit-icon.PNG" class="edit-img">
       </a>
       <img src="/assets/bin-icon.PNG" class="bin-img">
@@ -140,7 +147,7 @@
           <p class="hidden-content hidden">DNI: 99966699</p>
         </div>
       </div>
-      <a href="editar_usuario.html">
+      <a href="modificar_usuario.html">
         <img src="/assets/edit-icon.PNG" class="edit-img">
       </a>
       <img src="/assets/bin-icon.PNG" class="bin-img">
@@ -164,7 +171,7 @@
           <p class="hidden-content hidden">DNI: 99966699</p>
         </div>
       </div>
-      <a href="editar_usuario.html">
+      <a href="modificar_usuario.html">
         <img src="/assets/edit-icon.PNG" class="edit-img">
       </a>
       <img src="/assets/bin-icon.PNG" class="bin-img">
@@ -186,7 +193,7 @@
           <p class="hidden-content hidden">DNI: 99966699</p>
         </div>
       </div>
-      <a href="editar_usuario.html">
+      <a href="modificar_usuario.html">
         <img src="/assets/edit-icon.PNG" class="edit-img">
       </a>
       <img src="/assets/bin-icon.PNG" class="bin-img">
@@ -208,7 +215,7 @@
           <p class="hidden-content hidden">DNI: 99966699</p>
         </div>
       </div>
-      <a href="editar_usuario.html">
+      <a href="modificar_usuario.html">
         <img src="/assets/edit-icon.PNG" class="edit-img">
       </a>
       <img src="/assets/bin-icon.PNG" class="bin-img">
@@ -230,7 +237,7 @@
           <p class="hidden-content hidden">DNI: 99966699</p>
         </div>
       </div>
-      <a href="editar_usuario.html">
+      <a href="modificar_usuario.html">
         <img src="/assets/edit-icon.PNG" class="edit-img">
       </a>
       <img src="/assets/bin-icon.PNG" class="bin-img">
