--- a/html/modificar_logro.html
+++ b/html/modificar_logro.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Modificar e incluir imágenes</title>
+  <title>Modificar trofeo</title>
 
   <!-- FontAwesome CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
 
   <link rel="stylesheet" href="/css/style.css" />
   <link rel="stylesheet" href="/css/administrador.css" />
-  <link rel="stylesheet" href="/css/modificar_incluir_imagenes.css" />
+  <link rel="stylesheet" href="/css/modificar_logro.css" />
 </head>
 
 <body>
@@ -36,7 +36,7 @@
         <div class="title-path">
           <span>Club</span>
           <span>/</span>
-          <span>Modificar e incluir imágenes</span>
+          <span>Modificar trofeo</span>
         </div>
       </div>
       <div class="col title-empty-col"></div>
@@ -51,30 +51,37 @@
   </button>
   <div class="side-menu">
     <a href="javascript:void(0)" class="close-btn">&times;</a>
+
     <div class="menu-section">
       <a href="javascript:void(0)" class="menu-title">Usuarios</a>
-      <a href="/html/registrar_usuarios.html" class="menu-text">Registrar usuarios</a>
+      <a href="/html/administrar_inscripciones.html" class="menu-text">Inscripciones</a>
       <a href="/html/administrar_usuarios.html" class="menu-text">Administrar usuarios</a>
+      <a href="/html/registrar_usuarios.html" class="menu-text">Registrar usuarios</a>
     </div>
 
     <div class="menu-section">
       <a href="javascript:void(0)" class="menu-title">Noticias</a>
-      <a href="/html/modificar_eliminar_noticias.html" class="menu-text">Modificar y eliminar noticias</a>
       <a href="/html/anadir_noticias.html" class="menu-text">Añadir noticias</a>
+      <a href="/html/modificar_noticias.html" class="menu-text">Modificar o eliminar noticias</a>
     </div>
+
     <div class="menu-section">
       <a href="javascript:void(0)" class="menu-title">Horarios</a>
-      <a href="/html/actualizar_modificar_horarios.html" class="menu-text">Actualizar y modificar horarios</a>
+      <a href="/html/modificar_horarios.html" class="menu-text">Actualizar y modificar horarios</a>
     </div>
+
     <div class="menu-section">
-      <a href="javascript:void(0)" class="menu-title">Club</a>
-      <a href="anadir_trofeos.html" class="menu-text">Añadir trofeos/logros del club</a>
-      <a href="modificar_incluir_imagenes.html" class="menu-text">Modificar e incluir imágenes</a>
+      <a href="javascript:void(0)" class="menu-title">Galería</a>
+      <a href="/html/anadir_imagenes.html" class="menu-text">Añadir nueva imagen</a>
+      <a href="/html/modificar_imagenes.html" class="menu-text">Eliminar imagenes</a>
     </div>
-    <hr>
+
     <div class="menu-section">
-      <a href="administrar_inscripciones.html" class="menu-text">Administrar inscripciones</a>
+      <a href="javascript:void(0)" class="menu-title">Palmarés</a>
+      <a href="/html/anadir_logros.html" class="menu-text">Añadir logros del club</a>
+      <a href="/html/modificar_logros.html" class="menu-text">Modificar o eliminar logros del club</a>
     </div>
+
   </div>
   <!-- Side Menu End -->
 
@@ -82,14 +89,22 @@
   <!-- Content Start -->
   <div class="main">
     <div class="content-container">
-      <h1>Añadir una imágen</h1>
+      <h1>Añadir un trofeo</h1>
       <div class="form-container">
         <form action="#" method="POST">
+
+          <div class="form-field">
+            <label for="trophy-title" class="field-title">Titulo</label><br />
+            <input type="text" id="trophy-title" name="trophy-title" autocomplete="off" /><br />
+          </div>
 
           <div class="form-field">
             <label for="trophy-image" class="field-title">Imagen</label><br />
             <input type="file" id="trophy-image" name="trophy-image" autocomplete="off" /><br />
           </div>
+
+          <label for="trophy-description" class="field-title">Descripción</label><br />
+          <textarea name="trophy-description" id="trophy-description" autocomplete="off"></textarea>
 
           <input type="submit" value="Enviar" />
       </div>
