titulos de administrador

--- a/html/anadir_imagenes.html
+++ b/html/anadir_imagenes.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Modificar e incluir imágenes</title>
+  <title>Añadir nueva imagen</title>
 
   <!-- FontAwesome CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
@@ -36,7 +36,7 @@
         <div class="title-path">
           <span>Club</span>
           <span>/</span>
-          <span>Modificar e incluir imágenes</span>
+          <span>Añadir nueva imagen</span>
         </div>
       </div>
       <div class="col title-empty-col"></div>
