--- a/html/administrar_inscripciones.html
+++ b/html/administrar_inscripciones.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Administrar inscripciones</title>
+  <title>Inscripciones</title>
 
   <!-- FontAwesome CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
@@ -24,20 +24,21 @@
   <!-- Title Start -->
   <div class="container">
     <div class="row title-row">
-
       <div class="col title-empty-col"></div>
       <div class="col-5 title-col">
         <div class="title-main">
-          <span>Administrar inscripciones</span>
+          <span>Usuarios</span>
         </div>
       </div>
 
       <div class="col-5 title-col">
         <div class="title-path">
+          <span>Usuarios</span>
+          <span>/</span>
+          <span>Inscripciones</span>
         </div>
       </div>
       <div class="col title-empty-col"></div>
-
     </div>
   </div>
   <!-- Title End -->
