--- a/html/modificar_noticias.html
+++ b/html/modificar_noticias.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Modificar y eliminar noticias</title>
+  <title>Modificar o eliminar noticias</title>
 
   <!-- FontAwesome CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
@@ -36,7 +36,7 @@
         <div class="title-path">
           <span>Noticias</span>
           <span>/</span>
-          <span>Modificar y eliminar noticias</span>
+          <span>Modificar o eliminar noticias</span>
         </div>
       </div>
       <div class="col title-empty-col"></div>
