Textos e imagenes cerrados

--- a/html/autonomica.html
+++ b/html/autonomica.html
@@ -117,13 +117,17 @@
       <h1>Programación de competiciones autonómicas</h1>
       <p>
         En el siguiente apartado mostraremos un listado de las competiciones
-        autonómicas en las que participará el club junto a su fecha de
-        realización.
+        autonómicas en las que participa el club diferenciando entre
+        individuales y conjuntos.
       </p>
       <h2>Conjuntos</h2>
-      <p></p>
+      <p>Campeonato de Andalucía de Promesas</p>
+      <p>Campeonato de Andalucía de Precopa</p>
       <h2>Individual</h2>
-      <p></p>
+      <p>Campeonato de Andalucía de Promesas</p>
+      <p>Campeonato de Andalucía Individual</p>
+      <p>Campeonato de Andalucía de Copa</p>
+      <p>Campeonato de Andalucía de Precopa</p>
     </div>
     <!-- Content End -->
 
