--- a/html/competiciones.html
+++ b/html/competiciones.html
@@ -114,19 +114,19 @@
     <div class="content-container">
       <div class="image-container">
         <a href="/html/provincial.html">
-          <img src="/assets/original/gimt (3).jpeg" />
+          <img src="/assets/Más fotos/provincial.jpeg" />
           <h3>Provincial</h3>
         </a>
       </div>
       <div class="image-container">
         <a href="/html/autonomica.html">
-          <img src="/assets/original/gimt (2).jpeg" />
+          <img src="/assets/Más fotos/autonomica.jpeg" />
           <h3>Autonómica</h3>
         </a>
       </div>
       <div class="image-container">
         <a href="/html/nacional.html">
-          <img src="/assets/original/gimt (1).jpeg" />
+          <img src="/assets/Más fotos/nacional.jpeg" />
           <h3>Nacional</h3>
         </a>
       </div>
