--- a/html/cuerpo_tecnico.html
+++ b/html/cuerpo_tecnico.html
@@ -119,7 +119,10 @@
         Nuestros entrenadores forman gimnastas en dos niveles, escuela y club,
         realizando una gran labor tanto técnica como organizativa. Muchos de
         ellos tienen una larga experiencia con este deporte, tanto de
-        entrenadores como de gimnastas.
+        entrenadores como de gimnastas. Muchos de ellos se ven obligados a
+        compaginar la enseñanza de este deporte con sus estudios y formación en
+        otros ámbitos. Gracias a su labor y sacrificio nuestras gimnastas
+        adquieren una gran formación en este deporte.
       </p>
       <br />
       <div class="image-container">
