--- a/html/el_club.html
+++ b/html/el_club.html
@@ -171,15 +171,15 @@
     <div class="sections-container">
       <div>
         <a href="/html/cuerpo_tecnico.html">
-          <img
-            src="/assets/Más fotos/WhatsApp Image 2020-11-08 at 11.45.21 (1).jpeg"
-          />
+          <img src="/assets/cuerpoTecnico.jpeg" />
           <h2>Cuerpo técnico</h2>
         </a>
       </div>
       <div>
         <a href="/html/palmares.html">
-          <img src="/assets/original/gimt (2)2.jpeg" />
+          <img
+            src="/assets/Más fotos/WhatsApp Image 2020-11-08 at 11.45.21 (1).jpeg"
+          />
           <h2>Palmarés</h2>
         </a>
       </div>
