--- a/html/matriculacion.html
+++ b/html/matriculacion.html
@@ -102,7 +102,7 @@
   <!-- Content Start -->
   <div class="main">
     <div class="content-container">
-      <h1>Matriculación 2020/21</h1>
+      <h1>Matriculación</h1>
       <div class="form-container">
         <form action="#" method="POST">
           <div class="form-field">
