--- a/html/nacional.html
+++ b/html/nacional.html
@@ -117,13 +117,13 @@
       <h1>Programación de competiciones nacionales</h1>
       <p>
         En el siguiente apartado mostraremos un listado de las competiciones
-        nacionales en las que participará el club junto a su fecha de
-        realización.
+        nacionales en las que participa el club diferenciando entre individual y
+        conjuntos.
       </p>
       <h2>Conjuntos</h2>
-      <p></p>
+      <p>Actualmente ninguno</p>
       <h2>Individual</h2>
-      <p></p>
+      <p>Campeonato de España Absoluto Individual</p>
     </div>
     <!-- Content End -->
 
