--- a/html/actividades.html
+++ b/html/actividades.html
@@ -114,19 +114,19 @@
     <div class="content-container">
       <div class="image-container">
         <a href="/html/actividades_verano.html">
-          <img src="/assets/original/gimt (3).jpeg" />
+          <img src="/assets/actividades_verano.jpeg" />
           <h3>Actividades de verano</h3>
         </a>
       </div>
       <div class="image-container">
         <a href="/html/federadas.html">
-          <img src="/assets/original/gimt (2).jpeg" />
+          <img src="/assets/federadas.jpeg" />
           <h3>Federadas</h3>
         </a>
       </div>
       <div class="image-container">
         <a href="/html/escuela.html">
-          <img src="/assets/original/gimt (1).jpeg" />
+          <img src="/assets/Escuela.jpeg" />
           <h3>Escuela</h3>
         </a>
       </div>
