--- a/html/escuela.html
+++ b/html/escuela.html
@@ -117,7 +117,15 @@
       <h1>Escuela de Gimnasia Rítmica La Mojonera</h1>
       <p>
         Los grupos de escuela se dividen en función de las edades de las
-        gimnastas, teniendo cada grupo un horario y un día programado.
+        gimnastas, teniendo cada grupo un horario y un día programado. A este
+        nivel se buscar desarrollar la flexibilidad necesaria para realizar los
+        ejercicios adecuados para una calificación buena en los torneos y de
+        esta forma poder progresar y subir de niveles.
+      </p>
+      <p>
+        Aquellas gimnastas que muestran suficiente desarrollo se les propone
+        subir de nivel y competir en torneos a niveles superiores para seguir
+        formándolas y mejorando sus técnicas y habilidades.
       </p>
       <img src="/assets/Escuela.jpeg" />
     </div>
