--- a/html/provincial.html
+++ b/html/provincial.html
@@ -117,12 +117,17 @@
       <h1>Programación de competiciones provinciales</h1>
       <p>
         En el siguiente apartado mostraremos un listado de las competiciones
-        provinciales en las que participará el club.
+        provinciales en las que participa el club diferenciando entre torneos de
+        individuales y conjuntos.
       </p>
       <h2>Conjuntos</h2>
-      <p></p>
+      <p>Torneo organizado por el Club Diamonds de Pulpí</p>
+      <p>Torneo organizado por el Club Rítmica La Mojonera en La Mojonera</p>
+      <p>Torneo organizado por el Club Roquetas 2015 en Roquetas de Mar</p>
       <h2>Individual</h2>
-      <p></p>
+      <p>Torneo organizado por el Club Diamonds de Pulpí</p>
+      <p>Torneo organizado por el Club Rítmica La Mojonera en La Mojonera</p>
+      <p>Torneo organizado por el Club Roquetas 2015 en Roquetas de Mar</p>
     </div>
     <!-- Content End -->
 
